--- a/app/globals.css
+++ b/app/globals.css
@@ -2,14 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+
 :root { 
   --ff: "Montserrat", system-ui;
   --ff2: "Barlow Condensed", system-ui;
-  --h1: bold var(--fs-xl)/2em var(--ff2);
-  --h2: bold var(--fs-lg)/1.6em var(--ff2);
-  --h3: bold var(--fs-md)/1.2em var(--ff2);
-  --h4: bold var(--fs-sm)/1em var(--ff2);
-  --p: normal var(--fs-base)/1em var(--ff);
+  --h1: bold var(--fs-xl)/3em var(--ff2);
+  --h2: bold var(--fs-lg)/2em var(--ff2);
+  --h3: bold var(--fs-md)/1.6em var(--ff2);
+  --h4: bold var(--fs-base)/1.5em var(--ff2);
+  --p: normal var(--fs-base)/1.5em var(--ff);
 
   --primary: hsl(208, 55%, 47%);
   --secondary: hsl(49, 99%, 55%);
@@ -17,39 +21,39 @@
   --black: hsl(0, 0%, 10%);
 }
 
-/* For browsers that support clamp */
+/* For browsers that support clamp  */
 @supports (font-size: clamp(1rem, 1vi, 1rem)) {
   :root {
-      --fs-sm: clamp(0.8rem, -0.09vi + 0.82rem, 0.75rem);
-      --fs-base: clamp(1rem, 0vi + 1rem, 1rem);
-      --fs-md: clamp(1.25rem, 0.15vi + 1.21rem, 1.33rem);
-      --fs-lg: clamp(1.56rem, 0.39vi + 1.47rem, 1.78rem);
-      --fs-xl: clamp(1.95rem, 0.76vi + 1.76rem, 2.37rem);
-      --fs-xxl: clamp(2.44rem, 1.3vi + 2.12rem, 3.16rem);
-      --fs-xxxl: clamp(3.05rem, 2.1vi + 2.53rem, 4.21rem);
+		--fs-sm: clamp(1rem, 0vi + 1rem, 1rem);
+		--fs-base: clamp(1.25rem, 0.15vi + 1.21rem, 1.33rem);
+		--fs-md: clamp(1.56rem, 0.38vi + 1.47rem, 1.77rem);
+		--fs-lg: clamp(1.95rem, 0.73vi + 1.77rem, 2.35rem);
+		--fs-xl: clamp(2.44rem, 1.25vi + 2.13rem, 3.13rem);
+		--fs-xxl: clamp(3.05rem, 2.02vi + 2.55rem, 4.16rem);
+		--fs-xxxl: clamp(3.81rem, 3.13vi + 3.03rem, 5.53rem);
   }
-  }
-  /* For browsers that don't support clamp */
-  @supports not (font-size: clamp(1rem, 1vi, 1rem)) {
+}
+/* For browsers that don't support clamp */
+@supports not (font-size: clamp(1rem, 1vi, 1rem)) {
   :root {
-          --fs-sm: 0.8rem;
-          --fs-base: 1rem;
-          --fs-md: 1.25rem;
-          --fs-lg: 1.56rem;
-          --fs-xl: 1.95rem;
-          --fs-xxl: 2.44rem;
-          --fs-xxxl: 3.05rem;
+		--fs-sm: 1rem;
+		--fs-base: 1.25rem;
+		--fs-md: 1.56rem;
+		--fs-lg: 1.95rem;
+		--fs-xl: 2.44rem;
+		--fs-xxl: 3.05rem;
+		--fs-xxxl: 3.81rem;
   }
   @media screen and (min-width: 1280px) {
-      :root {
-              --fs-sm: 0.75rem;
-              --fs-base: 1rem;
-              --fs-md: 1.33rem;
-              --fs-lg: 1.78rem;
-              --fs-xl: 2.37rem;
-              --fs-xxl: 3.16rem;
-              --fs-xxxl: 4.21rem;
-      }
+    :root {
+			--fs-sm: 1rem;
+			--fs-base: 1.33rem;
+			--fs-md: 1.77rem;
+			--fs-lg: 2.35rem;
+			--fs-xl: 3.13rem;
+			--fs-xxl: 4.16rem;
+			--fs-xxxl: 5.53rem;
+    }
   }
 }
 
